Set color of "consider fixing" for sufficient contrast

--- a/public/css/report.css
+++ b/public/css/report.css
@@ -229,7 +229,7 @@ table {
 }
 
 .alert-warning {
-   color: #efc94c;
+   color: #9F890C;
 }
 
 .alert-info {
